# lamb-cli

./: .gitignore  CMakeLists.txt  build.sh  compile_commands.json
src/: libcroco.h  libcroco_32.h  main.c  parser.h  subcmd.c  subcmd.h
src/cli/: parser.c  subcmd.c
src/croco/: lambproto.c
src/croco/include/: libcrocou.h  liblambproto.h
src/keys/: keys.c
src/keys/include/: keys.h
src/modes/request/: request.c
src/modes/request/include/: request.h
src/modes/send/: send.c
src/modes/send/include/: send.h
src/pwds/: cryptfiles.c  cryptmisc.c  cryptutil.c  pwds.c
src/pwds/include/: pwds.h
src/utils/: cfgd.c
src/utils/include/: cfgd.h
